# borsh-incremental

./: Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: lib.rs
tests/: basic.rs
