[package]
name = "borsh-incremental"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Incremental Borsh deserialization with defaults for backward-compatible schema evolution."
repository = "https://github.com/snormore/borsh-incremental"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
